--- a/image-editing/flux-kontext-img-to-image.mdx
+++ b/image-editing/flux-kontext-img-to-image.mdx
@@ -22,6 +22,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
   "negative_prompt": "(worst quality:2), (low quality:2), (normal quality:2), (jpeg artifacts), (blurry), (duplicate), (morbid), (mutilated), (out of frame), (extra limbs), (bad anatomy), (disfigured), (deformed), (cross-eye), (glitch), (oversaturated), (overexposed), (underexposed), (bad proportions), (bad hands), (bad feet), (cloned face), (long neck), (missing arms), (missing legs), (extra fingers), (fused fingers), (poorly drawn hands), (poorly drawn face), (mutation), (deformed eyes), watermark, text, logo, signature, grainy, tiling, censored, nsfw, ugly, blurry eyes, noisy image, bad lighting, unnatural skin, asymmetry",
   "model_id": "flux-kontext-dev",
   "num_inference_steps": "28",
+  "safety_checker": true,
   "strength": "0.5",
   "guidance": "2.5",
   "enhance_prompt": null
