--- a/enterprise-api/text-to-image/system-details.mdx
+++ b/enterprise-api/text-to-image/system-details.mdx
@@ -1,7 +1,7 @@
 ---
 title: "System Details"
 description: "This endpoint is used to retrieve system details."
-openapi: "POST /text-to-image/system_details"
+openapi: "POST /system_details"
 ---
 
 ## Request
