--- a/enterprise-api/text-to-image/clear-cache.mdx
+++ b/enterprise-api/text-to-image/clear-cache.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Clear Cache"
 description: "This endpoint is used to clear the API's cache."
-openapi: "POST /clear_cache"
+openapi: "enterprise-api/text-to-image/openapi.json POST /clear_cache"
 ---
 
 ## Request
