--- a/enterprise-api/text-to-image/update-server.mdx
+++ b/enterprise-api/text-to-image/update-server.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Update Server"
 description: "This endpoint is used to update your dedicated server."
-openapi: "POST /update_server"
+openapi: "enterprise-api/text-to-image/openapi.json POST /update_server"
 ---
 
 ## Request
