--- a/enterprise-api/text-to-image/clear-queue.mdx
+++ b/enterprise-api/text-to-image/clear-queue.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Clear Queue"
 description: "This endpoint is used to clear the API's queue."
-openapi: "POST /clear_queue"
+openapi: "enterprise-api/text-to-image/openapi.json POST /clear_queue"
 ---
 
 ## Request
