--- a/enterprise-api/text-to-image/fetch-queue-image.mdx
+++ b/enterprise-api/text-to-image/fetch-queue-image.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Fetch Image"
 description: "This endpoint is used to fetch images from the processing queue."
-openapi: "POST /fetch"
+openapi: "enterprise-api/text-to-image/openapi.json POST /fetch"
 ---
 
 <Note>
