--- a/enterprise-api/text-to-image/restart-server.mdx
+++ b/enterprise-api/text-to-image/restart-server.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Restart Server"
 description: "This endpoint is used to restart your dedicated server."
-openapi: "POST /restart_server"
+openapi: "enterprise-api/text-to-image/openapi.json POST /restart_server"
 ---
 
 ## Request
