ficx openapi spec

--- a/enterprise-api/text-to-image/clear-queue.mdx
+++ b/enterprise-api/text-to-image/clear-queue.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Clear Queue"
 description: "This endpoint is used to clear the API's queue."
-openapi: "enterprise-api/text-to-image/openapi.json POST /clear_queue"
+openapi: "POST /enterprise/clear_queue"
 ---
 
 ## Request
-Send a `POST` request to below endpoint to clear the API's cache.
+Send a `POST` request to below endpoint to clear the API's queue.
 ```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/clear_queue' \
 ```
