--- a/enterprise-api/text-to-image/restart-server.mdx
+++ b/enterprise-api/text-to-image/restart-server.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Restart Server"
 description: "This endpoint is used to restart your dedicated server."
-openapi: "enterprise-api/text-to-image/openapi.json POST /restart_server"
+openapi: "POST /enterprise/restart_server"
 ---
 
 ## Request
-Send a `POST` request to  [https://modelslab.com/api/v1/enterprise/restart\_server](https://modelslab.com/api/v1/enterprise/restart_server) endpoint to restart your dedicated server.
+Send a `POST` request to  below endpoint to restart your dedicated server.
 ```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/restart_server' \
 ```
