--- a/enterprise-api/text-to-image/system-details.mdx
+++ b/enterprise-api/text-to-image/system-details.mdx
@@ -1,7 +1,7 @@
 ---
 title: "System Details"
 description: "This endpoint is used to retrieve system details."
-openapi: "enterprise-api/text-to-image/openapi.json POST /system_details"
+openapi: "POST /enterprise/system_details"
 ---
 
 ## Request
