--- a/voice-cloning/speech-to-text.mdx
+++ b/voice-cloning/speech-to-text.mdx
@@ -24,6 +24,11 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
   "track_id": null
 }
 ```
+
+<Warning>
+**Timestamp Level Accuracy:** Sentence-level timestamps work well and provide reliable results. However, word-level timestamps may not be accurate and may provide less reliable results.
+</Warning>
+
 ### Languages Supported
 
 <Note>
