add resolution info

--- a/video-api/image-to-video-ultra.mdx
+++ b/video-api/image-to-video-ultra.mdx
@@ -23,7 +23,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
     "prompt":"moving character",
     "model_id": "wan2.1",
     "negative_prompt":"low quality",
-    "resolution":320,
+    "resolution":480,
     "num_frames": 92,
     "num_inference_steps":8,
     "guidance_scale":1.0,
@@ -31,3 +31,9 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
     "track_id":null
 }
 ```
+
+<Note>
+**Resolution Limits:**
+- **wan2.2**: Maximum resolution is **720p**
+- **wan2.1**: Maximum resolution is **480p**
+</Note>
