added MCP Web API documentation and integration guides

--- a/index.mdx
+++ b/index.mdx
@@ -33,6 +33,20 @@ Transform your ideas into reality with ModelsLab's comprehensive AI API suite. G
   >
     Test models and experiment with parameters before integration
   </Card>
+  <Card
+    title="MCP Web API"
+    icon="robot"
+    href="/mcp-web-api/overview"
+  >
+    Connect AI agents like Claude Code, OpenCode, and Cursor to ModelsLab
+  </Card>
+  <Card
+    title="Client SDKs"
+    icon="box"
+    href="/sdk/python"
+  >
+    Official SDKs for Python, TypeScript, PHP, Dart, and Go
+  </Card>
 </CardGroup>
 
 ## Core AI Offerings
