fix: update MCP endpoint URL to production modelslab.com

--- a/mcp-web-api/agent-integration.mdx
+++ b/mcp-web-api/agent-integration.mdx
@@ -32,7 +32,7 @@ Add ModelsLab to your Claude Code MCP settings file:
     {
       "mcpServers": {
         "modelslab": {
-          "url": "http://modelslab-frontend-v2.test/mcp/v7",
+          "url": "https://modelslab.com/mcp/v7",
           "headers": {
             "Authorization": "Bearer YOUR_API_KEY"
           }
@@ -48,7 +48,7 @@ Add ModelsLab to your Claude Code MCP settings file:
     {
       "mcpServers": {
         "modelslab": {
-          "url": "http://modelslab-frontend-v2.test/mcp/v7",
+          "url": "https://modelslab.com/mcp/v7",
           "headers": {
             "Authorization": "Bearer YOUR_API_KEY"
           }
@@ -91,7 +91,7 @@ Add ModelsLab to your OpenCode configuration:
         "servers": {
           "modelslab": {
             "type": "http",
-            "url": "http://modelslab-frontend-v2.test/mcp/v7",
+            "url": "https://modelslab.com/mcp/v7",
             "headers": {
               "Authorization": "Bearer YOUR_API_KEY"
             }
@@ -110,7 +110,7 @@ Add ModelsLab to your OpenCode configuration:
         "servers": {
           "modelslab": {
             "type": "http",
-            "url": "http://modelslab-frontend-v2.test/mcp/v7",
+            "url": "https://modelslab.com/mcp/v7",
             "headers": {
               "Authorization": "Bearer YOUR_API_KEY"
             }
@@ -152,7 +152,7 @@ Then in the interactive session:
     {
       "mcpServers": {
         "modelslab": {
-          "url": "http://modelslab-frontend-v2.test/mcp/v7",
+          "url": "https://modelslab.com/mcp/v7",
           "headers": {
             "Authorization": "Bearer YOUR_API_KEY"
           }
@@ -168,7 +168,7 @@ Then in the interactive session:
     {
       "mcpServers": {
         "modelslab": {
-          "url": "http://modelslab-frontend-v2.test/mcp/v7",
+          "url": "https://modelslab.com/mcp/v7",
           "headers": {
             "Authorization": "Bearer YOUR_API_KEY"
           }
@@ -205,7 +205,7 @@ Add ModelsLab to your Cursor MCP settings:
 {
   "mcp.servers": {
     "modelslab": {
-      "url": "http://modelslab-frontend-v2.test/mcp/v7",
+      "url": "https://modelslab.com/mcp/v7",
       "headers": {
         "Authorization": "Bearer YOUR_API_KEY"
       }
@@ -221,7 +221,7 @@ Alternatively, edit `.cursor/mcp.json` in your project:
   "servers": {
     "modelslab": {
       "type": "http",
-      "url": "http://modelslab-frontend-v2.test/mcp/v7",
+      "url": "https://modelslab.com/mcp/v7",
       "headers": {
         "Authorization": "Bearer YOUR_API_KEY"
       }
@@ -247,7 +247,7 @@ Edit your Continue configuration file (`~/.continue/config.json`):
       "name": "modelslab",
       "transport": {
         "type": "http",
-        "url": "http://modelslab-frontend-v2.test/mcp/v7",
+        "url": "https://modelslab.com/mcp/v7",
         "headers": {
           "Authorization": "Bearer YOUR_API_KEY"
         }
@@ -268,7 +268,7 @@ For any MCP-compatible client, use the following configuration pattern:
   "servers": {
     "modelslab-v7": {
       "transport": "http",
-      "url": "http://modelslab-frontend-v2.test/mcp/v7",
+      "url": "https://modelslab.com/mcp/v7",
       "headers": {
         "Authorization": "Bearer YOUR_API_KEY"
       }
@@ -297,7 +297,7 @@ For security, you can use environment variables instead of hardcoding your API k
     {
       "mcpServers": {
         "modelslab": {
-          "url": "http://modelslab-frontend-v2.test/mcp/v7",
+          "url": "https://modelslab.com/mcp/v7",
           "headers": {
             "Authorization": "Bearer ${MODELSLAB_API_KEY}"
           }
@@ -319,7 +319,7 @@ For security, you can use environment variables instead of hardcoding your API k
     {
       "mcpServers": {
         "modelslab": {
-          "url": "http://modelslab-frontend-v2.test/mcp/v7",
+          "url": "https://modelslab.com/mcp/v7",
           "headers": {
             "Authorization": "Bearer %MODELSLAB_API_KEY%"
           }
