Deprecate scene-make endpoint disable playground and add warning for migration.

--- a/video-api/scene-maker.mdx
+++ b/video-api/scene-maker.mdx
@@ -2,7 +2,13 @@
 title: "Scene Maker"
 openapi: 'POST /video/scene_maker'
 description: "Generate videos from a sequence of images using the Scene Maker API."
+deprecated: true
+playground: 'none'
 ---
+
+<Warning>
+**Deprecation Notice:** This endpoint will be discontinued on Sunday, January 26, 2026 at 12:00 AM IST and will no longer be available. Please migrate to alternative endpoints before this date.
+</Warning>
 
 ### Scene Maker
 Generate videos from a sequence of images.
