--- a/video-api/overview.mdx
+++ b/video-api/overview.mdx
@@ -7,25 +7,19 @@ description: "API for generating and processing videos from text and images."
 
 <CardGroup cols={2}>
   <Card title="Watermark Remover" href="/video-api/watermark-remover" img="https://assets.modelslab.com/generations/42a8971d-ed6b-4fab-8cab-1fe294e0ce62.webp">
-    <div className="flex items-start justify-between">
-      <span>Remove watermarks from videos using AI-powered processing</span>
-      <span className="badge-new">NEW</span>
-    </div>
+    Remove watermarks from videos using AI-powered processing
   </Card>
-  <Card title="Text to Video" href="/video-api/text-to-video" img="/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg">
+  <Card title="Text to Video" href="/video-api/text-to-video" img="/images/video-api/assets/images/Text_to_video_modelslab.jpg">
     Generate videos from text descriptions using the Text to Video API.
   </Card>
-  <Card title="Image to Video" href="/video-api/img-to-video" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
+  <Card title="Image to Video" href="/video-api/img-to-video" img="/images/video-api/assets/images/Image_to_video_modelslab.jpg">
     Generate videos from images using the Image to Video API.
   </Card>
-  <Card title="Text to video ultra" href="/video-api/text-to-video-ultra" img="/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg">
+  <Card title="Text to video ultra" href="/video-api/text-to-video-ultra" img="/images/video-api/assets/images/Text_to_video_ultra_modelslab.jpg">
     Generate high-definition videos from text descriptions using the Text to Video Ultra API.
   </Card>
-  <Card title="Image to video ultra" href="/video-api/image-to-video-ultra" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
+  <Card title="Image to video ultra" href="/video-api/image-to-video-ultra" img="/images/video-api/assets/images/Image_to_video_ultra_modelslab.jpg">
     Generate high-definition videos from images using the Image to Video Ultra API.
-  </Card>
-  <Card title="Scene Maker" href="/video-api/scene-maker" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
-    Generate videos from a sequence of images using the Scene Maker API
   </Card>
   <Card title="Base64 to URL" href="/video-api/base64-to-url">
     Upload a video in base64 format and retrieve it as a URL.
