--- a/image-editing/qwen-edit.mdx
+++ b/image-editing/qwen-edit.mdx
@@ -25,6 +25,7 @@ The `init_image` parameter can accept a string if editing a single image or an a
     "https://assets.modelslab.com/generations/57df2bbf-512a-4a9a-bf99-35cde14113e7.jpg"
   ],
   "safety_checker": true,
+  "model_id": "qwen-edit-2509",
   "base64": false,
   "webhook": null,
   "track_id": null
