--- a/enterprise-api/speech-to-text/clear-cache.mdx
+++ b/enterprise-api/speech-to-text/clear-cache.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Clear Cache"
 description: "This endpoint is used to clear the API's cache."
-openapi: "POST /enterprise/text_to_speech/clear_cache"
+openapi: "POST /enterprise/speech_to_text/clear_cache"
 ---
 
 ## Request
@@ -12,7 +12,13 @@ Send a `POST` request to below endpoint to clear the API's cache.
 
 ## Body
 ```json json
-{ 
+{
     "key": "enterprise_api_key"
 }
 ```
+
+## Body Attributes
+
+<ParamField query="key" type="string" required>
+  API key for authentication.
+</ParamField>
