--- a/enterprise-api/speech-to-text/fetch-audio.mdx
+++ b/enterprise-api/speech-to-text/fetch-audio.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Fetch Audio"
+title: "Fetch"
 description: "This endpoint is used to fetch a queued audio."
-openapi: "POST /enterprise/text_to_speech/fetch/{id}"
+openapi: "POST /enterprise/speech_to_text/fetch/{id}"
 ---
+
 ## Request
 Send a `POST` request to below endpoint to return the corresponding queued audio. Where `{id}` is the ID returned together with the audio URL in the response upon its generation.
 ```curl curl
@@ -11,7 +12,13 @@ Send a `POST` request to below endpoint to return the corresponding queued audio
 
 ## Body
 ```json json
-{ 
+{
     "key": "enterprise_api_key"
 }
 ```
+
+## Body Attributes
+
+<ParamField query="key" type="string" required>
+  API key for authentication.
+</ParamField>
