--- a/enterprise-api/speech-to-text/update-server.mdx
+++ b/enterprise-api/speech-to-text/update-server.mdx
@@ -12,7 +12,13 @@ Send a `POST` request to below endpoint to update your dedicated server.
 
 ## Body
 ```json json
-{ 
+{
     "key": "enterprise_api_key"
 }
 ```
+
+## Body Attributes
+
+<ParamField query="key" type="string" required>
+  API key for authentication.
+</ParamField>
