added supported documents

--- a/enterprise-api/speech-to-text/speech-to-text.mdx
+++ b/enterprise-api/speech-to-text/speech-to-text.mdx
@@ -37,7 +37,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 
 <ParamField query="language" default="en" type="string">
   Language for the voice.\
-  Allowed values: `en`
+  Allowed values: `af`, `ar`, `be`, `bn`, `bg`, `zh`, `cs`, `da`, `nl`, `en`, `fi`, `fr`, `de`, `el`, `he`, `hi`, `hu`, `id`, `it`, `ja`, `kn`, `ko`, `ml`, `mr`, `ne`, `pa`, `fa`, `pl`, `pt`, `ro`, `ru`, `sr`, `es`, `sv`, `tl`, `ta`, `te`, `th`, `tr`, `uk`, `ur`, `vi`, `cy`
 </ParamField>
 
 
