--- a/enterprise-api/speech-to-text/speech-to-text.mdx
+++ b/enterprise-api/speech-to-text/speech-to-text.mdx
@@ -40,6 +40,58 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
   Allowed values: `af`, `ar`, `be`, `bn`, `bg`, `zh`, `cs`, `da`, `nl`, `en`, `fi`, `fr`, `de`, `el`, `he`, `hi`, `hu`, `id`, `it`, `ja`, `kn`, `ko`, `ml`, `mr`, `ne`, `pa`, `fa`, `pl`, `pt`, `ro`, `ru`, `sr`, `es`, `sv`, `tl`, `ta`, `te`, `th`, `tr`, `uk`, `ur`, `vi`, `cy`
 </ParamField>
 
+<Note>
+Whisper supports several languages, but performance may vary due to factors like limited training data, script complexity, and regional dialects, potentially affecting transcription accuracy.
+</Note>
+
+## Supported Languages
+
+| Language | Code |
+|----------|------|
+| Afrikaans | af |
+| Arabic | ar |
+| Belarusian | be |
+| Bengali | bn |
+| Bulgarian | bg |
+| Chinese | zh |
+| Czech | cs |
+| Danish | da |
+| Dutch | nl |
+| English | en |
+| Finnish | fi |
+| French | fr |
+| German | de |
+| Greek | el |
+| Hebrew | he |
+| Hindi | hi |
+| Hungarian | hu |
+| Indonesian | id |
+| Italian | it |
+| Japanese | ja |
+| Kannada | kn |
+| Korean | ko |
+| Malayalam | ml |
+| Marathi | mr |
+| Nepali | ne |
+| Panjabi | pa |
+| Persian | fa |
+| Polish | pl |
+| Portuguese | pt |
+| Romanian | ro |
+| Russian | ru |
+| Serbian | sr |
+| Spanish | es |
+| Swedish | sv |
+| Tagalog | tl |
+| Tamil | ta |
+| Telugu | te |
+| Thai | th |
+| Turkish | tr |
+| Ukrainian | uk |
+| Urdu | ur |
+| Vietnamese | vi |
+| Welsh | cy |
+
 
 <ParamField query="timestamp_level" default="null">
   Timestamp level for the transcription.\
