Song gen API chnages introduce guide and so.

--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -4,6 +4,53 @@ description: "Follow along with updates across ModelsLab API and Developer Conso
 rss: true
 ---
 
+<Update label="2025-02-05" description="Song Generator API: ACE-Step v1.5 Model">
+  <Frame>
+    <img
+      className="block"
+      src="https://assets.modelslab.com/generations/5441a55a-b930-4e15-b14d-61fc8b08c3d8.png"
+      alt="Song Generator API"
+    />
+  </Frame>
+
+  ## Song Generator API powered by ACE-Step v1.5
+
+  Major upgrade to the Song Generator API with the new **ACE-Step v1.5** model for professional-grade song creation.
+
+  #### API Endpoint
+  - **Standard API**: `POST /api/v6/voice/song_generator`
+
+  #### What's New
+
+  - **ACE-Step v1.5 Model**: State-of-the-art AI model for high-quality song generation with vocal synthesis
+  - **50+ Languages**: Generate songs with vocals in languages from Arabic to Chinese, Cantonese to Spanish
+  - **Flexible Duration**: Create songs from 30 seconds to 8 minutes (30-480 seconds)
+  - **Instrumental Mode**: Generate instrumental versions without vocals using `instrumental` parameter
+  - **Smart Lyrics Generation**: Automatic lyrics generation based on prompt and caption, or use your own lyrics
+  - **Advanced Control**:
+    - `caption` parameter for music style, instruments, atmosphere, and production style
+    - `lyrics` parameter for song structure, vocal styles, and energy control
+    - `prompt` parameter for automatic lyrics generation
+    - Language-specific vocal synthesis with proper pronunciation
+
+  #### New Documentation
+
+  - **[Song Generator API Reference](/voice-cloning/song-generator)**: Complete API documentation with examples
+  - **[Song Generation Guide](/guides/song-generation-guide)**: Professional guide with best practices, caption writing tips, lyrics structure guidance, duration calculation, and real-world examples
+
+  #### Key Features
+
+  - Professional music structure tags: `[Intro]`, `[Verse]`, `[Chorus]`, `[Bridge]`, `[Outro]`
+  - Vocal control tags: `[raspy vocal]`, `[whispered]`, `[falsetto]`, `[powerful belting]`
+  - Energy control: `[high energy]`, `[building energy]`, `[explosive]`, `[melancholic]`
+  - Consistent caption-lyrics matching for optimal results
+  - Duration calculation guidelines based on lyrics length and structure
+
+  #### Getting Started
+
+  Check out the [Song Generation Guide](/guides/song-generation-guide) for detailed examples and best practices for creating professional songs with the ACE-Step v1.5 model.
+
+</Update>
 
 <Update label="2025-11-05" description="Song Generator API and Lyrics Generator API: New Parameters">
   ## New Parameter in Song Generator API Endpoint: [Song Generator API](/voice-cloning/song-generator)
