--- a/voice-cloning/overview.mdx
+++ b/voice-cloning/overview.mdx
@@ -7,6 +7,12 @@ description: 'Tools for speech-to-text, text-to-speech, text-to-SFX, and voice-o
 ### Endpoints
 
 <CardGroup>
+  <Card title="Song Generator" href="/voice-cloning/song-generator" icon="sparkles">
+    <span class="badge-new">NEW</span> Create complete songs with vocals in 50+ languages using ACE-Step v1.5
+  </Card>
+  <Card title="Lyrics Generator" href="/voice-cloning/lyrics-generator" >
+    Generate creative song lyrics using AI-powered text generation
+  </Card>
   <Card title="Text to Speech" icon="speech" href="/voice-cloning/text-to-speech">
     Transform text content into high-quality speech using advanced TTS technology
   </Card>
@@ -21,12 +27,6 @@ description: 'Tools for speech-to-text, text-to-speech, text-to-SFX, and voice-o
   </Card>
    <Card title="Voice Changer" href="/voice-cloning/voice-to-voice" >
     Extract and isolate vocal tracks from music and audio files
-  </Card>
-  <Card title="Lyrics Generator" href="/voice-cloning/lyrics-generator" >
-    Generate creative song lyrics using AI-powered text generation
-  </Card>
-  <Card title="Song Generator" href="/voice-cloning/song-generator">
-    Create complete songs with AI-generated music and vocal compositions
   </Card>
   <Card title="AI Dubbing" href="/voice-cloning/create-dubbing" >
     Create professional dubbing for videos with synchronized voice replacement
