--- a/voice-cloning/song-generator.mdx
+++ b/voice-cloning/song-generator.mdx
@@ -1,8 +1,12 @@
 ---
 title: "Song Generator"
 openapi: 'POST /voice/song_generator'
-description: 'Generate songs by providing lyrics along with reference audio.'
+description: 'Generate songs in 50+ languages by providing lyrics along with reference audio using ACE-Step v1.5 model.'
 ---
+
+<Note>
+This API uses the **ACE-Step v1.5** model for high-quality song generation with vocal synthesis.
+</Note>
 
 ## Request
 
@@ -13,12 +17,113 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ```
 
 
-## Body 
+## Body
 
-<Warning>
-    - If you send custom lyrics in the `lyrics` field, the model will generate a song based on those lyrics.
-    - Chinese and English lyrics should not be mixed in the same input.
-</Warning>
+<Tip>
+- Song duration can be between **30 seconds** and **480 seconds** (0.5 - 8 minutes)
+- If lyrics are not provided, set `lyrics_generation` to `true` and provide a `prompt` and `caption` instead
+- Set `instrumental` to `true` to generate an instrumental version without vocals
+- 50+ languages are supported (see table below)
+</Tip>
+
+<Info>
+Sample request when `lyrics_generation` is `false`
+</Info>
+
+```json json
+{       
+    "key":"your_api_key",   
+    "lyrics_generation":false,    
+    "lyrics":"[Intro: Sampled Vocal Loop]
+    (Oh-oh-oh-oh-oh-oh-oh-oh)
+    (Oh-oh-oh-oh-oh-oh-oh-oh)
+
+    [Chorus]
+    Esta noche todo te lo daré
+    Es libre ya no me amarraré
+    Grita mi nombre, dime que me quieres
+    Me pierdo en tus ojos como si fuera nieve
+    Esta noche todo te lo daré
+    Entre tus brazos me quedaré
+    Grita mi nombre, dime que me quieres
+    Me pierdo en tus ojos como si fuera nieve
+
+    [Verse 1]
+    Tus ojos me hipnotizan, me hacen suspirar
+    Tus labios me llaman, no puedo escapar
+    Tus manos me tocan, siento la pasión
+    Cada latido es una explosión
+    Acércate más, no me dejes caer
+    Bailamos juntos hasta el amanecer
+
+    [Pre-Chorus]
+    Tus labios me tocan, tus ojos me miran
+    No puedo escapar, mi alma se inspira
+
+    [Chorus]
+    Esta noche todo te lo daré
+    Esta noche todo te lo daré
+    Es libre ya no me amarraré
+    Grita mi nombre, dime que me quieres
+    Me pierdo en tus ojos como si fuera nieve
+    Esta noche todo te lo daré
+    Entre tus brazos me quedaré
+    Grita mi nombre, dime que me quieres
+    Me pierdo en tus ojos como si fuera nieve
+
+    [Verse 2]
+    Tus besos me alzan, me hacen volar
+    No hay dudas, no hay miedo, solo quiero amar
+    Tu voz me llama, tu cuerpo me arde
+    Con cada susurro todo se comparte
+    Juntos en el fuego, no hay que temer
+    Esta noche nunca lo vas a olvidar
+
+    [Bridge]
+    Solo un instante
+    Deja que te acerque, ven a mí
+    Solo un instante
+    Deja que te acerque, ven a mí
+    Solo un instante
+    Deja que te acerque, ven a mí
+    Solo un instante
+    Deja que te acerque, ven a mí
+    Solo un instante
+    Deja que te acerque, ven a mí
+    [Chorus]
+    Esta noche todo te lo daré
+    Es libre ya no me amarraré
+    Grita mi nombre, dime que me quieres
+    Me pierdo en tus ojos como si fuera nieve
+    Esta noche todo te lo daré
+    Entre tus brazos me quedaré
+    Grita mi nombre, dime que me quieres
+    Me pierdo en tus ojos como si fuera nieve
+    [Outro]
+    Solo una noche más
+    Hasta que me desvuelva
+    Y de que me quede sin nada",
+    "caption":"A modern reggaeton track with a strong flamenco influence, opening with a pitched and chopped vocal sample melody over a classic dembow beat. A clear, confident female vocal enters, singing in Spanish with a touch of reverb. The arrangement is built on a deep sub-bass, crisp drum machine percussion, and a distinctive plucked synth guitar riff that carries the main melodic hook. The chorus elevates the energy with layered vocals and a more intense delivery. The track breaks down into a more atmospheric bridge with filtered, introspective vocals before returning to the full chorus and concluding with a sparse, whispered outro that fades to silence.",
+    "duration": 199,
+    "webhook":null,
+    "track_id": null
+}
+```
+<Info>
+Sample request when `lyrics_generation` is `true`
+</Info>
+
+```json json
+{       
+    "key":"your_api_key",   
+    "lyrics_generation":true,    
+    "prompt":"A polished Cantopop track built on an ethereal foundation of layered female vocal harmonies that create atmospheric pads with wordless 'oohs' and 'aahs'. A crisp electronic drum machine provides a steady mid-tempo beat, complemented by clean synth keys and a subtle bassline. The lead female vocal is clear and melodic, sung entirely in Cantonese, guiding the listener through verses and into an uplifting chorus where her voice becomes more powerful and layered. The arrangement includes brief instrumental interludes featuring chime-like sound effects before concluding with a fade-out of the signature airy vocal textures.",    
+    "caption":"female vokal,folkmetal, Electro ,Violin,Piano,extinct,ad’ baseline,jane breakbeat; guitar,Harmonium,bass),child’s voice.",
+    "duration":199,
+    "webhook":null,     
+    "track_id": null
+}
+```
 
 ## Supported Languages
 
@@ -75,32 +180,3 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 | Cantonese | yue |
 | Chinese | zh |
 | Unknown | unknown |
-<Info>
-Sample request when `lyrics_generation` is `false`
-</Info>
-
-```json json
-{       
-    "key":"your_api_key",   
-    "lyrics_generation":false,    
-    "init_audio":"https://storage.googleapis.com/falserverless/model_tests/diffrythm/rock_en.wav",    
-    "lyrics":"[Intro - Guitar Riff]\n\n[Verse 1]\nRip the script, break it mold\nShatter chains, dare the bold\nTook your crown, you can't ignore\nFreedom's knock on every door\n\n[Chorus]\nBreak the chains, let it pour\nShout it loud, beg no more\nBurn the rules, end the war\nWe're alive, can't ignore\nCan't ignore\n\n[Verse 2]\nTear it down, brick by brick\nEvery lie, every trick\nSkies on fire, won't obey\nChaos calls, don't delay\n\n[Chorus]\nBreak the chains, let it pour\nShout it loud, beg no more\nBurn the rules, end the war\nWe're alive, can't ignore\nCan't ignore\n\n[Guitar Solo]\n\n[Verse 3]\nEchoes scream, hearts collide\nNo surrender, no divide\nWolves are howling, hear their cry\nWe rise up, won't comply\n\n[Chorus]\nBreak the chains, let it pour\nShout it loud, beg no more\nBurn the rules, end the war\nWe're alive, can't ignore\nCan't ignore\n\n[Outro - Guitar Riff]\n[abrupt silence]",
-    "duration": 95,  
-    "webhook":null,     
-    "track_id": null
-}
-```
-<Info>
-Sample request when `lyrics_generation` is `true`
-</Info>
-
-```json json
-{       
-    "key":"your_api_key",   
-    "lyrics_generation":true,    
-    "init_audio":"https://storage.googleapis.com/falserverless/model_tests/diffrythm/rock_en.wav",    
-    "prompt":"Generate a catchy Tamil hip-hop / rap song.\nLanguage: simple Tamil (preferably Roman Tamil, no complex literary words).\nStyle: modern desi hip-hop with Chennai street vibes.\nTheme: confidence, mass attitude, swag, city life, light romance.\nMusic feel: heavy bass, fast groove, club-ready beat.\nLyrics: very simple lines, easy rhymes, highly repeatable hook.\nStructure: Intro, Chorus, Verse 1, Chorus, Verse 2, Chorus.\nAvoid poetry and long sentences. Keep it raw, catchy, and street-level",    
-    "webhook":null,     
-    "track_id": null
-}
-```
